ft(verification): User verifies email - User upon signUp receives a confirmation email - After confirming through his email - His approved in the database - Added test - Documented in swagger [Finishes #170764577]
